adapt height to content till half screen; fix z-index (#101)

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -259,10 +259,11 @@
 }
 
 .ArticleNote{
+    z-index: 100;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 15vh;
+    max-height: 50vh;
     display: flex;
     align-items: center;
     background: var(--dark);
